#fix android overflow bug

--- a/assets/sass/templates.app.scss
+++ b/assets/sass/templates.app.scss
@@ -149,6 +149,7 @@
 }
 
 .intro__container {
+    overflow: hidden;
     max-width: $text-container-s;
     align-self: center;
     padding: $double-space;
